--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,5 @@
 spring.application.name=incruise
-
-# DB
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_incruise
-spring.datasource.username=postgres
-# DB's password
-spring.datasource.password=Allan123@#
-
-#PostgreSQLDialect does not need to be specified explicitly using 'hibernate.dialect'
-#(remove the property setting and it will be selected by default)
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-#To disable WARN
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/incruise
 
 # server
 server.port=8080
