--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_incruise
+spring.datasource.username=postgres
+spring.datasource.password=Allan123@#
+
 spring.application.name=incruise
 server.servlet.context-path=/incruise
 
