alteração para inserção no banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,4 @@
-#PostgreSQLDialect does not need to be specified explicitly using 'hibernate.dialect'
-#(remove the property setting and it will be selected by default)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-
-#To disable WARN
-spring.jpa.open-in-view=false
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-    spring.application.name=incruise
+spring.application.name=incruise
 server.servlet.context-path=/incruise
 
 # server
@@ -21,3 +10,14 @@ server.servlet.session.timeout=180s
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_incruise
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+#Initialize BD
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
+
+#To disable WARN
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
