--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Inicialização do Banco de Dados
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:schema.sql
 #spring.sql.init.data-locations=classpath:data.sql
