Criação de usuários e transporte de scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,7 @@ spring.sql.init.mode=always
 # Desativar WARNs e mostrar SQL no log
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+
+# Spring Security default
+spring.security.user.name=user
+spring.security.user.password=password
