Autenticação dos usuários funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.jpa.show-sql=true
 # Spring Security default
 spring.security.user.name=user
 spring.security.user.password=password
+
+# Logging
+logging.level.org.springframework.security=DEBUG
