Cadastro funcionando sem verificação de duplicidade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL}
 
 # Inicialização do Banco de Dados
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
-spring.sql.init.mode=always
+#spring.sql.init.mode=always
 
 # Desativar WARNs e mostrar SQL no log
 spring.jpa.open-in-view=false
