Sessões e logout implementados + nova propriedade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.servlet.context-path=${CONTEXT_PATH}
 server.port=${SERVER_PORT}
 server.servlet.session.timeout=${SESSION_TIMEOUT}
 
+spring.thymeleaf.check-template-location=false
+
 # Banco de Dados
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
