Início da página de registro, criação de erro, melhorias no Header
Foram feitas muitas alterações em várias partes do código (Tentarei não fazer mais isso)

- Início das funcionalidades de Candidatura
  - Página de informação
  - Botões de cancelar, aceitar
- Melhorias no Header
  - Novo Design
  - Fixação do usuário Logado
-Tratamento de Exceção
  -Controlador Para Tal
  - Página de erro padrão
  - Página Not-Found (Ainda não Funcionando)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 spring.application.name=${APP_NAME}
 server.servlet.context-path=${CONTEXT_PATH}
 
+#Exceptions
+server.error.include-message=always
+server.error.include-stacktrace=always
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=true
+
 # server
 server.port=${SERVER_PORT}
 server.servlet.session.timeout=${SESSION_TIMEOUT}
+
+spring.thymeleaf.check-template-location=false
 
 # Banco de Dados
 spring.datasource.url=${DB_URL}
@@ -12,9 +21,9 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT}
 spring.jpa.properties.hibernate.format_sql=${FORMAT_SQL}
 
-# Inicialização do Banco de Dados
+# Inicializaï¿½ï¿½o do Banco de Dados
 spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
-#spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 # Desativar WARNs e mostrar SQL no log
 spring.jpa.open-in-view=false
