feat: implementando salvar png

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.sql.init.mode=never
 # Desativar WARNs e mostrar SQL no log
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=${SHOW_SQL}
+
+spring.servlet.multipart.enabled=true
