fix: atualizados as intership qunado atualizar as empresas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,4 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=${SHOW_SQL}
 
 spring.servlet.multipart.enabled=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
